--- a/index.html
+++ b/index.html
@@ -1,132 +1,86 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:o="urn:schemas-microsoft-com:office:office">
+<html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<meta name="x-apple-disable-message-reformatting">
-	<title></title>
-	<!--[if mso]>
-	<noscript>
-		<xml>
-			<o:OfficeDocumentSettings>
-				<o:PixelsPerInch>96</o:PixelsPerInch>
-			</o:OfficeDocumentSettings>
-		</xml>
-	</noscript>
-	<![endif]-->
-	<style>
-		table, td, div, h1, p {font-family: Arial, sans-serif;}
-	</style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Task 1</title>
 </head>
-<body style="margin:0;padding:0;">
-	<table role="presentation" style="width:100%;border-collapse:collapse;border:0;border-spacing:0;background:#ffffff;">
-		<tr>
-			<td align="center" style="padding:0;">
-				<table role="presentation" style="width:602px;border-collapse:collapse;border:1px solid #cccccc;border-spacing:0;text-align:left;">
-					<!-- First line (logo) -->
+<body>
+    <table role="presentation" style="width:100%; border-collapse:collapse;">
+        <tr colspan="4">
+            <td align="center">
+                <table role="presentation" style="width:500px;border-collapse:collapse;border:1px solid #cccccc;border-spacing:0;text-align:left; background:white;">
+                    <!-- First line (logo) -->
                     <tr>
-						<td align="center" style="padding:0px 0 0px 0;background:white;">
+                        <td colspan="4" align="center" style="background:white;">
                             <a href="https://www.viator.com/">
                                 <img src="https://cdn.tripadvisor.com/img2/email/viator_logo_v2.png" alt="Viator Logo" width="100" style="height:auto;display:block;"/>
                             </a>
 						</td>
-					</tr>
-                    <!-- Second line (title) -->
+                    </tr>
+                    <!-- Second line (tile) -->
                     <tr>
-						<td align="center" style="padding:0px 0 0px 0;background:white;">
-                            <h2>Explore the unexpected in Barcelona</h2>
+                        <td colspan="4" align="center" style="color:#153643; background:white; font-family: Arial; font-size: 28px; font-weight: bold; padding-left: 50px; padding-right: 50px; padding-top: 10px; padding-bottom: 10px;">
+                            Explore the unexpected in Barcelona
 						</td>
-					</tr>
-                    <!-- Third line (Barcelona image) -->
+                    </tr>
+                    <!-- Third line (image) -->
                     <tr>
-						<td align="center" style="background:white;">
+                        <td colspan="4" align="center" style="background:white;">
                             <img src="https://cdn.tripadvisor.com/img2/email/vr/aps5-2_barcelona.jpg" alt="Barcelona image" width="100%" style="height:auto;display:block;"/>
 						</td>
-					</tr>
-                    <!-- Fourth line (description) -->
+                    </tr>
+                    <!-- Fourth line (Description) -->
                     <tr>
-						<td align="center" style="padding-left: 10px;padding-right: 10px;background:white;">
-                            <p>Every destination has its must-sees, but we're here to help you see a side of Barcelona 
-                                most travelers miss. Venture off the beaten path and escape the crowds with our 
-                                hand-picked list of experiences that reveal its true character.</p>
+                        <td colspan="4" align="center" style="color:#153643; padding: 20px;background:white; font-family: Arial; font-size: 14px; line-height: 20px; font-weight: normal;">
+                            Every destination has its must-sees, but we're here to help you see a side of Barcelona 
+                            most travelers miss. Venture off the beaten path and escape the crowds with our 
+                            hand-picked list of experiences that reveal its true character.
 						</td>
-					</tr>
-                    <!-- Fifth line (Barcelona button) -->
+                    </tr>
+                    <!-- Fifth line (button) -->
                     <tr>
-						<td align="center" style="padding:0px 0 0px 0;background:white;">
+                        <td colspan="4" align="center" style="background:white;">
                             <a href="https://www.viator.com/collections/Hidden-Gems-in-Barcelona/c7">
-								
-                                <button style="background-color: #af143e; border: none;color: white;padding: 15px 32px;text-align: center; text-decoration: none; display: inline-block;border-radius: 2px; width: 95%; cursor: pointer;"> <b>Discover hidden gems</b> </button>
+                                <button style="background-color: #af143e; border: none;color: white;padding: 15px 32px;text-align: center; text-decoration: none; display: inline-block;border-radius: 2px; width: 95%; cursor: pointer; font-weight: bold; font-family: Arial;"> Discover hidden gems </button>
                             </a>
 						</td>
-					</tr>
-                    <!-- Sixth line (Recommendation) -->
-					<tr>
-						<td style="padding:36px 30px 42px 30px;">
-							<table role="presentation" style="width:100%;border-collapse:collapse;border:0;border-spacing:0;">
-								<tr>
-									<td style="padding-right:30%;color:#153643;">
-										<h1 style="font-size:20px;margin:0 0 20px 0;font-family:Arial,sans-serif;">Top pick based on your bookings</h1>
-									</td>
-								</tr>
-								<tr>
-									<td style="padding:0;">
-										<table role="presentation" style="width:100%;border-collapse:collapse;border:0;border-spacing:0;">
-											<tr>
-												<td style="width:50%;padding:0;vertical-align:top;">
-													<table role="presentation" style="width:100%;border-collapse:collapse;border:0;border-spacing:0;">
-                                                        <tr>
-                                                            <td>
-                                                                <p>Barcelona City Tour Hop-On Hop-Off</p>
-                                                            </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td>
-                                                                <table role="presentation" style="width:100%;border-collapse:collapse;border:0;border-spacing:0;">
-                                                                    <tr>
-                                                                        <td style="padding:0;">
-                                                                            <table role="presentation" style="width:100%;border-collapse:collapse;border:0;border-spacing:0;">
-                                                                                <tr>
-                                                                                    <td style="width:100%;padding:0;vertical-align:top;">
-                                                                                        <h5><img src="https://cdn.tripadvisor.com/img2/email/rex/ratingstar4.5.png" alt="4.5 rating" width="30%" style="height:auto;display:inline;"/> 1864 reviews  </h5>
-                                                                                    </td>
-                                                                                    <!-- <td align="center" style="width:40%;padding:0;vertical-align:top;">
-                                                                                        <img src="https://cdn.tripadvisor.com/img2/email/rex/ratingstar4.5.png" alt="4.5 rating" width="100%" style="height:auto;display:block;"/> 
-                                                                                    </td>
-                                                                                    <td style="width:20px;padding:0;font-size:0;line-height:0;">&nbsp;</td>
-                                                                                    <td align="center" style="width:40%;padding:0;vertical-align:top; display:inline;">
-                                                                                        <h5>1864 reviews</h5>
-                                                                                    </td> -->
-                                                                                </tr>
-                                                                            </table>
-                                                                        </td>
-                                                                    </tr>
-                                                                </table>
-                                                            </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td align="center" style="padding:0px 0 0px 0;background:white;">
-                                                                <a href="https://www.viator.com/tours/x/x/d0-2140BCNHOP">
-                                                                    <button style="background-color: white; border: 2px solid #af143e;color: #af143e;padding: 15px 32px;text-align: center; text-decoration: none; display: inline-block;border-radius: 2px; width: 95%; cursor: pointer;"><b>See details</b></button>
-                                                                </a>
-                                                            </td>
-                                                        </tr>
-                                                    </table>
-												</td>
-												<td style="width:20px;padding:0;font-size:0;line-height:0;">&nbsp;</td>
-												<td style="width:50%;padding:0;vertical-align:top;">
-                                                    <img src="https://media.tacdn.com/media/attractions-splice-spp-360x240/07/1e/c1/f3.jpg" alt="Tourist Bus" width="100%" style="height:auto;display:block;"/>
-												</td>
-											</tr>
-										</table>
-									</td>
-								</tr>
-							</table>
-						</td>
-					</tr>
-				</table>
-			</td>
-		</tr>
-	</table>
+                    </tr>
+                    <!-- Sixth line (title card) -->
+                    <tr>
+                        <td colspan="4" align="left" style="padding: 15px 15px; color:#153643; background:white; font-family: Arial; font-size: 20px; font-weight: bold;">
+                            Top pick based on your bookings
+                        </td>
+                    </tr>
+                    <!-- Seventh line (recommendation cards) -->
+                    <tr>
+                        <td colspan="2" align="left" style="color:#153643; background-color: white; padding-left: 15px; padding-right: 15px; font-family: Arial; font-size: 14px;">
+                            Barcelona City Tour Hop-On Hop-Off
+                        </td>
+                        <td colspan="2" rowspan="3" style="width:50%;padding:0;vertical-align:center; background-color: white;">
+                            <img src="https://media.tacdn.com/media/attractions-splice-spp-360x240/07/1e/c1/f3.jpg" alt="Tourist Bus" width="100%" style="height:auto;display:block;"/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="1" align="center" style="padding-left:15px; vertical-align:center; background-color: white;">
+                            <img src="https://cdn.tripadvisor.com/img2/email/rex/ratingstar4.5.png" alt="4.5 rating" width="100%" style="height:auto;display:inline;"/>
+                        </td>
+                        <td colspan="1" align="left" style="padding: 15px 15px; color:#153643; background:white; font-family: Arial; font-size: 14px;">
+                            1864 reviews
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="2" align="center" style="background:white; padding-left: 5px; padding-right: 5px;">
+                            <a href="https://www.viator.com/tours/x/x/d0-2140BCNHOP">
+                                <button style="background-color: white; border: 2px solid #af143e;color: #af143e;padding: 15px 32px;text-align: center; text-decoration: none; display: inline-block;border-radius: 2px; width: 95%; cursor: pointer; font-family: Arial; font-weight: bold;">See details</button>
+                            </a>
+                        </td>
+                    </tr>
+                    <td style="height:15px;background-color: white;">&nbsp;</td>
+                </table>
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
